--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,5 @@
 plugins {
     id 'java'
-    id "io.freefair.lombok" version "5.3.0"
     id 'io.qameta.allure' version '2.9.6'
 }
 
@@ -33,6 +32,10 @@ dependencies {
     implementation 'org.jetbrains:annotations:23.0.0'
     testImplementation 'io.rest-assured:rest-assured:5.2.0'
     testImplementation 'io.qameta.allure:allure-selenide:2.20.0'
+    compileOnly 'org.projectlombok:lombok:1.18.24'
+    annotationProcessor 'org.projectlombok:lombok:1.18.24'
+    testCompileOnly 'org.projectlombok:lombok:1.18.24'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'
 }
 
 test {
