--- a/build.gradle
+++ b/build.gradle
@@ -41,4 +41,9 @@ dependencies {
 test {
     useJUnitPlatform()
     systemProperty 'selenide.headless', System.getProperty('selenide.headless')
+    systemProperty 'sut.url', System.getProperty('sut.url', 'http://localhost:8080')
+
+    systemProperty 'db.url', System.getProperty('db.url', 'jdbc:mysql://localhost:3306/app')
+    systemProperty 'db.login', System.getProperty('db.login', 'app')
+    systemProperty 'db.password', System.getProperty('db.password','pass')
 }
