--- a/build.gradle
+++ b/build.gradle
@@ -43,7 +43,7 @@ test {
     systemProperty 'selenide.headless', System.getProperty('selenide.headless')
     systemProperty 'sut.url', System.getProperty('sut.url', 'http://localhost:8080')
 
-    systemProperty 'db.url', System.getProperty('db.url', 'jdbc:postgresql://localhost:5432/app')
+    systemProperty 'db.url', System.getProperty('db.url', 'jdbc:mysql://localhost:3306/app')
     systemProperty 'db.login', System.getProperty('db.login', 'app')
     systemProperty 'db.password', System.getProperty('db.password', 'pass')
 }
